@@ -247,7 +247,7 @@ function AddonFigureDrawing_create(){
                 lines: points,
                 x: color[0],
                 y: color[1],
-                color: color[2]+' '+color[3]+' '+color[4]+' '+color[5],
+                color: color[2]+' '+color[3]+' '+color[4]+' '+color[5]
             };
             if (tmpPoint[0] != tmpPoint[j]) {
                 presenter.error = 'answerfigure';
@@ -278,14 +278,14 @@ function AddonFigureDrawing_create(){
         column: 0,
         x: 0,
         y: 0,
-        isSelected: false,
+        isSelected: false
     }
     presenter.drawingPoint = {
         row: 0,
         column: 0,
         x: 0,
         y: 0,
-        isDown: false,
+        isDown: false
     }
     var gcd = function(a, b) {
         if (!b) {
@@ -807,13 +807,32 @@ function AddonFigureDrawing_create(){
                 coordinatesContainer.addClass('coordinates');
                 coordinatesContainer.append(xContainer).append(yContainer);
                 presenter.figure.append(coordinatesContainer);
-                presenter.figure.on('mousemove', function(e) {
+
+                function setCalculatedPosition(e) {
                     coordinations.x = e.originalEvent.pageX || e.originalEvent.touches[0].pageX;
                     coordinations.y = e.originalEvent.pageY || e.originalEvent.touches[0].pageY;
                     presenter.mouseSX = parseInt(coordinations.x,10) - parseInt(presenter.figure.offset().left,10);
                     presenter.mouseSY = parseInt(coordinations.y,10) - parseInt(presenter.figure.offset().top,10);
                     xContainer.find('.value').html(presenter.mouseSX);
                     yContainer.find('.value').html(presenter.mouseSY);
+                }
+
+                var doesElementExist = function() {
+                    var $moduleSelector = $('.moduleSelector[data-id="'+presenter.addonID+'"]');
+
+                    if ($moduleSelector.length > 0) {
+                        $moduleSelector.on('mousemove', function(e) {
+                            setCalculatedPosition(e);
+                        });
+
+                        clearInterval(interval);
+                    }
+                };
+
+                var interval = setInterval(function() { doesElementExist(); }, 500);
+
+                presenter.figure.on('mousemove', function(e) {
+                    setCalculatedPosition(e);
                 });
             }
         };
